@@ -2,6 +2,7 @@
 v6.2.0-git
 ----------
 
+[mms] Abstracted maillog code.
 [mms] Enable configuration of IMAP cache lifetime for Horde_Cache and
       Hashtable backends.
 [mms] Only refresh quota information when switching to a mailbox the first
